public class colegio {
    private String nombre;

    public colegio(String nombre) {
        this.nombre = nombre;
    }
}
