public class estudiante {
    private String nombre;
    public estudiante(String nombre) {
        this.nombre = nombre;
    }
}
