public class matricula {
    private estudiante estudiantex;
    private seccion seccionx;
    public matricula(estudiante estudiantex, seccion seccionx){
        this.estudiantex = estudiantex;
        this.seccionx = seccionx;

    }

}
