public class profesor {
    private String nombree;

    public profesor(String nombre){
        this.nombree = nombre;
    }
}
