@startuml
scale 450 width
class estudiante{
}
class colegio{
}
class matricula{
Nombre alumno()
}
class profesor{
}
class seccion {
}
     'herencia
colegio <|-- seccion
     'Agregacion
seccion o-- profesor
seccion o-- estudiante
     'Asociacion entre estudiante y seccion
estudiante "0..*" - "1..*"seccion
     'Matricula relaciona estudiante y seccion
matricula .. estudiante
matricula .. seccion


@enduml